# flow-central-storage

./: .env.prod.template  README.md  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/versions/: 20260413_01_add_publisher_slug.py  20260422_01_add_child_book_support.py  20260606_01_add_parent_publisher_id.py  20260608_01_add_book_ai_processing_status.py  20260622_01_add_app_settings.py  20260622_02_add_bundles.py  20260622_03_add_book_groups.py  20260624_01_add_book_content_version.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  slugify.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  app_setting.py  book.py  book_group.py  bundle.py  publisher.py
apps/api/app/monitoring/: middleware.py
apps/api/app/repositories/: app_setting.py  book.py  book_group.py  bundle.py  material.py  publisher.py  teacher.py
apps/api/app/routers/: ai_content.py  ai_data.py  apps.py  auth.py  book_groups.py  books.py  health.py  processing.py  publishers.py  settings.py  standalone_apps.py  storage.py  teachers.py  teachers_crud.py  webhooks.py
apps/api/app/schemas/: ai_data.py  book.py  book_group.py  processing.py  publisher.py  setting.py  standalone_app.py
apps/api/app/services/: __init__.py  async_s3.py  cache.py  cefr.py  minio.py  standalone_apps.py  storage.py
apps/api/app/services/ai_data/: cleanup.py  models.py  retrieval.py  service.py  structure.py
apps/api/app/services/ai_processing/: auto_trigger.py  book_status.py
apps/api/app/services/audio_generation/: service.py  storage.py
apps/api/app/services/llm/: service.py
apps/api/app/services/pdf/: service.py  storage.py
apps/api/app/services/queue/: models.py  repository.py  service.py  tasks.py
apps/api/app/services/segmentation/: service.py  storage.py
apps/api/tests/: test_book_groups_endpoints.py  test_books_endpoints.py  test_bundle_index.py  test_bundle_skip_paths.py  test_cefr.py  test_config_entry_locator.py  test_config_path_normalization.py  test_metrics_endpoint.py  test_queue_service.py  test_schemas_book.py  test_settings_endpoints.py  test_standalone_app_version.py  test_storage_service.py  test_teacher_activities_endpoints.py  test_tts_service.py  test_vocabulary_dedup.py  test_vocabulary_extraction.py
docs/: architecture.md  (+4 more)
(+114 files in other folders)
